--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -1,49 +1,140 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3 Column Layout with Images</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <h1>Welcome to My Website</h1>
-        <p>Your subtitle or description can go here.</p>
-    </header>
+<!-- ============================================ -->
+<!--                  Services                    -->
+<!-- ============================================ -->
 
-    <div class="container">
-        <div class="img-side">
-            <img src="left-image.jpg" alt="Left Image" style="width: 100%; height: auto; border-radius: 5px;">
-            <p>Description for the left image.</p>
+<section id="services-1829">
+    <div class="cs-container">
+        <div class="cs-content">
+            <span class="cs-topper">Our Team</span>
+            <h2 class="cs-title">Our Dermatology & Aesthetic Services</h2>
+            <p class="cs-text">
+                Aside from seeing patients, Dr. Stitch is dedicated to patient advocacy and education on evidence-based medicine in dermatology, especially for skin of color. 
+            </p>
         </div>
-
-        <div class="column">
-            <h2>Column 1</h2>
-            <p>This is content for the first column. You can add more text, images, or other elements here.</p>
-            <hr> <!-- Divider -->
-        </div>
-        
-        <div class="column">
-            <h2>Column 2</h2>
-            <p>This is content for the second column. Use this space to convey your information in an organized manner.</p>
-            <hr> <!-- Divider -->
-        </div>
-
-        <div class="column">
-            <h2>Column 3</h2>
-            <p>This is content for the third column. Each column can contain different types of content.</p>
-            <hr> <!-- Divider -->
-        </div>
-
-        <div class="img-side">
-            <img src="right-image.jpg" alt="Right Image" style="width: 100%; height: auto; border-radius: 5px;">
-            <p>Description for the right image.</p>
-        </div>
+        <ul class="cs-card-group">
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Medical</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Cosmetic</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Surgical</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Skincare</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm1.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Medical</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm2.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Cosmetic</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm3.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Surgical</h3>
+                    </div>
+                </a>
+            </li>
+            <li class="cs-item">
+                <a href="" class="cs-link">
+                    <picture class="cs-picture">
+                        <!--Mobile Image-->
+                        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png">
+                        <!--Tablet and above Image-->
+                        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png">
+                        <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/People/derm4.png" alt="person" width="500" height="700">
+                    </picture>
+                    <div class="cs-flex">
+                        <h3 class="cs-h3">Skincare</h3>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </div>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+    <!-- Background Image, background image added in the css at 768px for parallax effect -->
+    <picture class="cs-background">
+        <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/dermatology-background.jpeg">
+        <source media="(min-width: 601px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/dermatology-background.jpeg">
+        <img decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/MISC/dermatology-background.jpeg" alt="cream background with ripple" width="1920" height="970" aria-hidden="true">
+    </picture>
+    <!-- Top left gold graphic -->
+    <img class="cs-graphic1" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gold-graphic.svg" alt="gold flake graphic" width="370" height="322" aria-hidden="true">
+    <!-- Bottom right gold graphic -->
+    <img class="cs-graphic2" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images/Graphics/gold-graphic.svg" alt="gold flake graphic" width="370" height="322" aria-hidden="true">
+</section>
+                                
