--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Layout</title>
+    <title>Travel BLOG</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,13 +11,13 @@
 
     <!-- Header Section -->
     <header>
-        <h1>My Awesome Website</h1>
+        <h1>TRAVELOG</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#gallery">Gallery</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="HOME">Home</a></li>
+                <li><a href="ABOUT">About</a></li>
+                <li><a href="GALLERY">Gallery</a></li>
+                <li><a href="CONTACT">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -26,23 +26,23 @@
     <main>
         <section id="home">
             <h2>Welcome to My Website</h2>
-            <p>This is a simple webpage layout with images, custom fonts, and basic styling. Feel free to customize it!</p>
+            <p>On this website I will be sharing my favorite places to travel to! Come join me on the journey!</p>
         </section>
 
         <section id="gallery">
             <h2>Gallery</h2>
             <div class="gallery">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image 1">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image 2">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image 3">
-                <img src="https://via.placeholder.com/150" alt="Placeholder Image 4">
+                <img src="beach.jpeg" alt="Kauai Beach">
+                <img src="cave.jpeg" alt="Na Pali Coast Cave">
+                <img src="chickens.jpeg" alt="Kauai Chickens">
+                <img src="coast.jpeg" alt="Na Pali Coast">
             </div>
         </section>
     </main>
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2023 My Awesome Website. All rights reserved.</p>
+        <p>&copy; My Travel Blog</p>
     </footer>
 
 </body>
