--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel BLOG</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-</head>
-<body>
+<title>Cooking With Kate</title>
+    <style>
+        body {background-color: rgb(196, 231, 239)}
+        h1 {color: rgb(2, 72, 136)}
+        h2 {color: rgb(47, 97, 107)}
+    </style>
 
     <!-- Header Section -->
     <header>
