--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cooking With Kate</title>
+<title>TRAVELOG</title>
     <style>
         body {background-color: rgb(196, 231, 239)}
         h1 {color: rgb(2, 72, 136)}
@@ -24,7 +24,7 @@
     <!-- Main Content Section -->
     <main>
         <section id="home">
-            <h2>Welcome to My Website</h2>
+            <h2>Travel With Me!</h2>
             <p>On this website I will be sharing my favorite places to travel to! Come join me on the journey!</p>
         </section>
 
