--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -16,10 +16,11 @@
 
     <p style="text-align: left;">These simple and fresh recipes are perfect to make for parties or to make for yourself. Cooking with Kate shares delicious and healthy recipes that everyone will love. The ingredients used are always available year round and can be found at any grocery store!</p>
 
-    <img src="beach.jpeg" style="width: 30%" style="height: 30%;">
-    <img src="cave.jpeg" style="width: 30%" style="height: 40%;">
-    <img src="chickens.jpeg" style="width: 30%" style="height: 30%;">
-    <img src="coast.jpeg" style="width: 30%" style="height: 30%;">
+    <img src="images/beach.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;">
+    <img src="images/cave.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 30%;">
+    <img src="images/chickens.jpeg" alt="Kuaui Chickens" style="width: 30%" style="height: 30%;">
+    <img src="images/coast.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;">
+
 <hr />
 
 <h2 style="text-align: center;"><b>Simple and Fresh Recipes!</b></h2>  
