--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -20,14 +20,14 @@
     <img src="images/cave.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 30%;">
     <img src="images/chickens.jpeg" alt="Kuaui Chickens" style="width: 30%" style="height: 30%;">
     <img src="images/coast.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;">
+    <img src="images/beach2.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;">
+    <img src="images/food.jpeg" alt="Food" style="width: 30%" style="height: 30%;">
 
 <hr />
 
-<h2 style="text-align: center;"><b>Simple and Fresh Recipes!</b></h2>  
-
-<h2 style="text-align: left;">First stop: KAUAI</h2>  
+<h2 style="text-align: center;">First stop: KAUAI</h2>  
     
-<p style="text-align: left;">We're starting off the blog with a trip to Kauai.</p>
+<p style="text-align: center;">We're starting off the blog with a trip to Kauai!</p>
 
         <h3>Ingredients:</h3>
             <ul>
