--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -8,7 +8,7 @@
         h2 {color: rgb(47, 97, 107)}
     </style>
 
-    <a style="float: right; padding: 10px" href="home.html">HOME</a>
+    <a style="float: right; padding: 10px" href="travel.html">HOME</a>
     <a style="float: right; padding: 10px" href="about.html">ABOUT</a>
     <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
 
