--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -37,9 +37,8 @@
     <hr />
 
     <blockquote>
-        "Don't be afraid to take whisks."
-        <br />
-        — Google
+        "The world is a book and those who do not travel read only one page."        <br />
+        — ST. AUGUSTINE
     </blockquote>
 
     <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
