--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -43,3 +43,8 @@
 
     <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
 
+    <footer>
+        &copy; My Travel Blog
+    </footer>
+</body>
+</html>
