--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -29,11 +29,6 @@
     
 <p style="text-align: center;">We're starting off the blog with a trip to Kauai!</p>
 
-        <h2>Ingredients:</h2>
-            <p style="text-align: left;">
-                blah blah blah
-            </p>
-
     <hr />
 
     <blockquote>
@@ -43,7 +38,7 @@
 
     <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
 
-    <footer>
+    <footer style="text-align: center;">
         &copy; My Travel Blog
     </footer>
 </body>
