--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -31,7 +31,7 @@
 
     <hr />
 
-    <blockquote>
+    <blockquote style="text-align: center;">
         "The world is a book and those who do not travel read only one page."        <br />
         — ST. AUGUSTINE
     </blockquote>
