--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -25,9 +25,9 @@
 
 <hr />
 
-<h2 style="text-align: center;">First stop: KAUAI</h2>  
+<h2 style="text-decoration: wavy;" style="text-align: center;">First stop: KAUAI</h2>  
     
-<p style="text-align: center;">We're starting off the blog with a trip to Kauai!</p>
+<p style="text-align: center;">We're starting off the blog with a trip to Kauai! This beautful destination is one of Hawaii's most luscious and tropical islands filled with wildlife and continuously changing weather patterns.</p>
 
     <hr />
 
