--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>TRAVELOG</title>
+<link rel="stylesheet" href="style.css">
     <style>
         body {background-color: rgb(196, 231, 239)}
         h1 {color: rgb(47, 97, 107)}
