--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>TRAVELOG</title>
-<link rel="stylesheet" href="style.css">
-    <style>
-        body {background-color: rgb(196, 231, 239)}
-        h1 {color: rgb(47, 97, 107)}
-        h2 {color: rgb(47, 97, 107)}
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TRAVELOG</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    <a style="float: right; padding: 10px" href="travel.html">HOME</a>
-    <a style="float: right; padding: 10px" href="about.html">ABOUT</a>
-    <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a>
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="nav-links">
+            <a href="travel.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="gallery.html">GALLERY</a>
+        </div>
+    </nav>
 
-    <h1 style="text-align: center;">TRAVEL WITH ME!</h1>
+    <!-- Header Section -->
+    <header>
+        <h1>TRAVEL WITH ME!</h1>
+    </header>
 
-    <img src="images/beach.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;">
-    <img src="images/cave.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 30%;">
-    <img src="images/chickens.jpeg" alt="Kuaui Chickens" style="width: 30%" style="height: 30%;">
-    <img src="images/coast.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;">
-    <img src="images/beach2.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;">
-    <img src="images/food.jpeg" alt="Food" style="width: 30%" style="height: 30%;">
-
-<hr />
-
-<h2 style="text-align: left;">First stop: KAUAI</h2>  
-    
-<p style="text-align: left;">We're starting off the blog with a trip to Kauai! This beautful destination is one of Hawaii's most luscious and tropical islands filled with wildlife and continuously changing weather patterns.</p>
+    <!-- Gallery Section -->
+    <section class="gallery">
+        <img src="images/beach.jpeg" alt="Kauai Beach">
+        <img src="images/cave.jpeg" alt="Na Pali Coast Cave">
+        <img src="images/chickens.jpeg" alt="Kuaui Chickens">
+        <img src="images/coast.jpeg" alt="Na Pali Coast">
+        <img src="images/beach2.jpeg" alt="Kauai Beach">
+        <img src="images/food.jpeg" alt="Food">
+    </section>
 
     <hr />
 
-    <blockquote style="text-align: center;">
-        "The world is a book and those who do not travel read only one page."        <br />
-        — ST. AUGUSTINE
-    </blockquote>
+    <!-- Blog Post Section -->
+    <section class="blog-post">
+        <h2>First stop: KAUAI</h2>
+        <p>We're starting off the blog with a trip to Kauai! This beautiful destination is one of Hawaii's most luscious and tropical islands filled with wildlife and continuously changing weather patterns.</p>
+    </section>
 
-    <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
+    <hr />
 
-    <footer style="text-align: center;">
-        &copy; My Travel Blog
+    <!-- Quote Section -->
+    <section class="quote">
+        <blockquote>
+            "The world is a book and those who do not travel read only one page." <br />
+            — ST. AUGUSTINE
+        </blockquote>
+    </section>
+
+    <!-- Footer Section -->
+    <footer>
+        <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
+        <p>&copy; My Travel Blog</p>
     </footer>
+
 </body>
 </html>
