--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -11,6 +11,9 @@
         body {background-color: rgb(196, 231, 239)} 
         h1 {color: rgb(47, 97, 107)} 
         h2 {color: rgb(47, 97, 107)} 
+        * {
+            font-family: Arial;
+        }
     </style> 
 
     <!-- Navigation Bar -->
