--- a/WebDesignHomework/Assignment11/gallery.html
+++ b/WebDesignHomework/Assignment11/gallery.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TRAVELOG</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+</head>
+<body>
+    
+    <style> 
+        body {background-color: rgb(196, 231, 239)} 
+        h1 {color: rgb(47, 97, 107)} 
+        h2 {color: rgb(47, 97, 107)} 
+        * {
+            font-family: Arial;
+        }
+    </style> 
+
+    <!-- Navigation Bar -->
+    <nav>
+        <div class="nav-links">
+        <a style="float: right; padding: 10px" href="travel.html">HOME</a> 
+        <a style="float: right; padding: 10px" href="about.html">ABOUT</a> 
+        <a style="float: right; padding: 10px" href="gallery.html">GALLERY</a> 
+        </div>
+    </nav>
+
 Coming Soon...
