--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -13,7 +13,7 @@
         h1 {color: rgb(47, 97, 107)} 
         h2 {color: rgb(47, 97, 107)} 
         * {
-            font-family: Arial;
+            font-family: 'Cormorant Garamond', serif;
         }
     </style> 
 
