--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -10,8 +10,7 @@
 
     <style> 
         body {background-color: rgb(196, 231, 239)} 
-        h1 {color: rgb(47, 97, 107)} 
-        h2 {color: rgb(47, 97, 107)} 
+        * {color: rgb(47, 97, 107)} 
         * {
             font-family: 'Cormorant Garamond', serif;
             font-size: 2.5em;
