--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -56,11 +56,11 @@
     </blockquote>
 </section>
 
-    <!-- Footer Section -->
-    <footer style="text-align: center;">
+   <!-- Footer Section -->
+    <footer class="footer">
         <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
         <p>&copy; My Travel Blog</p>
-    </footer> 
+    </footer>
 </body> 
 </html> 
 
