--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -58,8 +58,9 @@
 
    <!-- Footer Section -->
     <footer class="footer">
-        <p>Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
-        <p>&copy; My Travel Blog</p>
+        <p style="text-align: center;">Check out our <a href="gallery.html">Gallery</a> page for more photos!</p>
+
+        <p style="text-align: center;">&copy; My Travel Blog</p>
     </footer>
 </body> 
 </html> 
