--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -58,7 +58,8 @@
 
    <!-- Footer Section -->
     <footer class="footer">
-        <p style="text-align: center;">Check out our other pages for more photos! <a href="gallery.html">Gallery</a> </p>
+        <p style="text-align: center;">Check out our other pages for more photos! &#x2192;
+            <a href="gallery.html">Gallery</a> </p>
 
         <p style="text-align: center;">&copy; My Travel Blog</p>
     </footer>
