--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -64,6 +64,7 @@
             <a href="gallery.html">Gallery</a> </p>
 
         <p style="text-align: center;">&copy; My Travel Blog</p>
+        <img src="images/me.jpeg" alt="Get To Know Me" style="width: 10%" style="height: 10%;"> 
     </footer>
 </body> 
 </html> 
