--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -60,7 +60,7 @@
 
    <!-- Footer Section -->
     <footer class="footer">
-        <p style="text-align: center;">Check out our gallery for more photos! &#x2192;
+        <p style="text-align: center;">Check out our gallery for more photos! &#8674; &#8680;
             <a href="gallery.html">Gallery</a> </p>
             <img src="images/me.jpeg" alt="Get To Know Me" style="width: 10%" style="height: 10%;"> 
         <p style="text-align: center;">&copy; My Travel Blog</p>
