--- a/WebDesignHomework/Assignment11/about.html
+++ b/WebDesignHomework/Assignment11/about.html
@@ -4,20 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TRAVELOG</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet"="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap" />
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
 <body>
-    
+
     <style> 
         body {background-color: rgb(196, 231, 239)} 
-        h1 {color: rgb(47, 97, 107)} 
-        h2 {color: rgb(47, 97, 107)} 
-        * {
-            font-family: Arial;
-        }
+        * {color: rgb(47, 97, 107)} 
     </style> 
 
     <!-- Navigation Bar -->
@@ -29,4 +23,7 @@
         </div>
     </nav>
 
-Coming Soon...
+    <!-- Header Section -->
+    <header>
+        <h1 style="text-align: center;">TRAVEL WITH ME!</h1> 
+    </header>
