--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -50,7 +50,7 @@
 
     <!-- Quote Section -->
     <section class="quote">
-    <blockquote style="text-align: center;"> 
+    <blockquote style="text-align: right;"> 
         "The world is a book and those who do not travel read only one page." <br /> 
         — ST. AUGUSTINE 
     </blockquote>
