--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -60,9 +60,9 @@
 
    <!-- Footer Section -->
     <footer class="footer">
-        <p style="text-align: left;">Check out our gallery for more photos! &#8680;
+        <p style="text-align: left;">Check out our gallery for more photos! &#8702;
             <a href="gallery.html">Gallery</a> </p>
-            <img src="images/me.jpeg" alt="Get To Know Me" style="width: 20%" style="height: 20%;"> 
+            <img src="images/me.jpeg" alt="Get To Know Me" style="width: 1in" style="height: 1in;"> 
         <p style="text-align: center;">&copy; My Travel Blog</p>
     </footer>
 </body> 
