--- a/WebDesignHomework/Assignment11/travel.html
+++ b/WebDesignHomework/Assignment11/travel.html
@@ -59,13 +59,16 @@
 <hr />
 
    <!-- Footer Section -->
-    <footer class="footer">
-        <p style="text-align: left;">Check out our gallery for more photos and find out more about me, the author! &#8702;
+<footer class="footer">
+    <p style="text-align: left;">
+        Check out our gallery for more photos and find out more about me, the author! &#8702;
         <a href="gallery.html">Gallery</a> 
-        <a href="about.html">About</a> 
-        <img src="images/me.jpeg" alt="Get To Know Me" style="width: 1in" style="height: 1in;"> 
-        <p style="text-align: center;">&copy; My Travel Blog</p>
-    </footer>
+        <a href="about.html">About</a>
+    </p>
+    <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1in; height: 1in;"> 
+    <p style="text-align: center;">&copy; My Travel Blog</p>
+</footer>
+
 </body> 
 </html> 
 
