--- a/WebDesignHomework/Assignment12/gallery.html
+++ b/WebDesignHomework/Assignment12/gallery.html
@@ -37,7 +37,7 @@
     <img src="images/kauai5.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai6.jpeg" alt="Food" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai7.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
-    <img src="images/kauai8.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 30%;"> 
+    <img src="images/kauai8.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 25%;"> 
     <img src="images/kauai9.jpeg" alt="Kuaui Chickens" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai10.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai11.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
@@ -45,7 +45,7 @@
     <img src="images/kauai13.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai14.jpeg" alt="Na Pali Coast Cave" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai15.jpeg" alt="Kuaui Chickens" style="width: 30%" style="height: 30%;"> 
-    <img src="images/kauaui16.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;"> 
+    <img src="images/kauai16.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai17.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai18.jpeg" alt="Food" style="width: 30%" style="height: 30%;"> 
     <img src="images/kauai19.jpeg" alt="Food" style="width: 30%" style="height: 30%;"> 
