--- a/WebDesignHomework/Assignment12/gallery.html
+++ b/WebDesignHomework/Assignment12/gallery.html
@@ -55,9 +55,9 @@
    <!-- Footer Section -->
    <footer class="footer">
     <p style="text-align: left;">
-        Check out our gallery for more photos and find out more about me, the author! &#8702;
-        <a href="gallery.html">Gallery</a> 
-        <a href="about.html">About</a>
+        Check out our about and home page for more! &#8702;
+        <a href="about.html">About</a> 
+        <a href="travel.html">Home</a>
     </p>
     <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
     <p style="text-align: center;">&copy; My Travel Blog</p>
