--- a/WebDesignHomework/Assignment12/gallery.html
+++ b/WebDesignHomework/Assignment12/gallery.html
@@ -55,7 +55,7 @@
    <!-- Footer Section -->
    <footer class="footer">
     <p style="text-align: left;">
-        Check out our about and home page for more! &#8702;
+        Check out our about and home pages for more! &#8702;
         <a href="about.html">About</a> 
         <a href="travel.html">Home</a>
     </p>
