--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -29,4 +29,19 @@
         <h1 style="text-align: center;">TRAVEL WITH ME!</h1> 
     </header>
 
-    COMING SOON...
+    <hr /> 
+
+    <!-- Footer Section -->
+    <footer class="footer">
+     <p style="text-align: left;">
+         Check out our about and home pages for more! &#8702;
+         <a href="about.html">About</a> 
+         <a href="travel.html">Home</a>
+     </p>
+     <p style="text-align: center;">&copy; My Travel Blog</p>
+ </footer>
+ 
+ </body> 
+ </html> 
+
+ COMING SOON...
