--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -31,6 +31,24 @@
 
     <hr /> 
 
+    <form action="mailto:kate.monette@umconnect.umt.edu" method="post" enctype="text/plain">
+        <h3 style="text-align: center;">Suggest a Recipe</h3>
+        <fieldset>
+           <legend>Recipe Suggestion</legend>
+           <label>Your Email:<br />
+              <input type="email" name="email" required /></label>
+           <br />
+           <label>Suggested Recipe:<br />
+              <input type="text" name="activity" required /></label>
+           <br />
+           <label>Description of the Recipe:<br />
+              <textarea name="recipe" rows="4" cols="50" placeholder="Describe recipe here..." required></textarea></label>
+        </fieldset>
+        
+        <br/>
+        
+        <input type="submit" value="Submit Suggestion" />
+
     <!-- Footer Section -->
     <footer class="footer">
      <p style="text-align: left;">
