--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -56,7 +56,9 @@
          <a href="about.html">About</a> 
          <a href="travel.html">Home</a>
      </p>
-     <p style="text-align: center;">&copy; My Travel Blog</p>
+     <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
+    <p style="text-align: center;">&copy; 
+    My Travel Blog</p>
  </footer>
  
  </body> 
