--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -32,17 +32,17 @@
     <hr /> 
 
     <form action="mailto:kate.monette@umconnect.umt.edu" method="post" enctype="text/plain">
-        <h3 style="text-align: center;">Suggest a Recipe</h3>
+        <h3 style="text-align: center;">Where To Next</h3>
         <fieldset>
-           <legend>Recipe Suggestion</legend>
+           <legend>Destination Suggestion</legend>
            <label>Your Email:<br />
               <input type="email" name="email" required /></label>
            <br />
-           <label>Suggested Recipe:<br />
+           <label>Suggested Destination:<br />
               <input type="text" name="activity" required /></label>
            <br />
-           <label>Description of the Recipe:<br />
-              <textarea name="recipe" rows="4" cols="50" placeholder="Describe recipe here..." required></textarea></label>
+           <label>Tell Me More!:<br />
+              <textarea name="recipe" rows="4" cols="50" placeholder="Describe destination here..." required></textarea></label>
         </fieldset>
         
         <br/>
