--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -32,7 +32,7 @@
     <hr /> 
 
     <form action="mailto:kate.monette@umconnect.umt.edu" method="post" enctype="text/plain">
-        <h3 style="text-align: center;">Where To Next</h3>
+        <h3 style="text-align: center;">Where To Next!</h3>
         <fieldset>
            <legend>Destination Suggestion</legend>
            <label>Your Email:<br />
