--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -41,8 +41,8 @@
            <label>Suggested Destination:<br />
               <input type="text" name="activity" required /></label>
            <br />
-           <label>Tell Me More!:<br />
-              <textarea name="recipe" rows="4" cols="50" placeholder="Describe destination here..." required></textarea></label>
+           <label>Tell Me More:<br />
+              <textarea name="recipe" rows="4" cols="50" placeholder="" required></textarea></label>
         </fieldset>
         
         <br/>
