--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -38,7 +38,7 @@
            <label>Your Email:<br />
               <input type="email" name="email" required /></label>
            <br />
-           <label>Suggested Destination:<br />
+           <label>Destination:<br />
               <input type="text" name="activity" required /></label>
            <br />
            <label>Tell Me More:<br />
