--- a/WebDesignHomework/Assignment13/about.html
+++ b/WebDesignHomework/Assignment13/about.html
@@ -29,4 +29,19 @@
         <h1 style="text-align: center;">TRAVEL WITH ME!</h1> 
     </header>
 
-    COMING SOON...
+     <!-- Footer Section -->
+     <footer class="footer">
+        <p style="text-align: left;">
+            Check out our about and home pages for more! &#8702;
+            <a href="about.html">About</a> 
+            <a href="travel.html">Home</a>
+        </p>
+        <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
+       <p style="text-align: center;">&copy; 
+       My Travel Blog</p>
+    </footer>
+    
+    </body> 
+    </html> 
+
+    MORE TO COME SOON...
