--- a/WebDesignHomework/Assignment13/about.html
+++ b/WebDesignHomework/Assignment13/about.html
@@ -31,7 +31,7 @@
 
   <!-- Blog Post Section -->
   <section class="blog-post">
-    <h2 style="text-align: left;">About This Site!</h2>  
+    <h3 style="text-align: center;">About This Site!</h3>  
     <p style="text-align: left;">Welcome to [Your Travel Vlog Name] – your gateway to the world! Here, we celebrate the thrill of discovery, the joy of new experiences, and the magic of connecting with people and cultures across the globe. Our mission is to inspire, educate, and entertain travelers of all kinds—whether you're an experienced globetrotter, a weekend adventurer, or someone planning your first big trip.
 
     Through captivating videos, immersive storytelling, and practical travel guides, we bring the world to your screen. From bustling cityscapes to serene natural retreats, luxury escapes to budget-friendly adventures, we showcase destinations big and small, offering tips and insights to make your journey unforgettable.
@@ -40,6 +40,8 @@
         
     Our love for travel goes beyond destinations. It’s about the connections we make, the lessons we learn, and the memories we create along the way. So, dive in, explore, and let us help you write your own incredible travel story. Adventure awaits!</p> 
 </section>
+
+<hr >
 
      <!-- Footer Section -->
      <footer class="footer">
