--- a/WebDesignHomework/Assignment13/about.html
+++ b/WebDesignHomework/Assignment13/about.html
@@ -33,7 +33,7 @@
   <section class="blog-post"> 
     <p style="text-align: left;">Welcome to my TRAVELOG – your gateway to the world! Here, we celebrate the thrill of discovery, the joy of new experiences, and the magic of connecting with people and cultures across the globe. Our mission is to inspire, educate, and entertain travelers of all kinds—whether you're an experienced globetrotter, a weekend adventurer, or someone planning your first big trip.
 
-    Through captivating videos, immersive storytelling, and practical travel guides, we bring the world to your screen. From bustling cityscapes to serene natural retreats, luxury escapes to budget-friendly adventures, we showcase destinations big and small, offering tips and insights to make your journey unforgettable.
+    Through captivating photos, immersive storytelling, and practical travel guides, we bring the world to your screen. From bustling cityscapes to serene natural retreats, luxury escapes to budget-friendly adventures, we showcase destinations big and small, offering tips and insights to make your journey unforgettable.
         
     But this site isn’t just about us—it’s about you! We want to spark your wanderlust and provide tools to help you travel smarter, deeper, and more sustainably. You’ll find everything from must-visit spots and travel hacks to personal reflections and cultural insights, all crafted to make your travels more enriching.
         
