--- a/WebDesignHomework/Assignment13/about.html
+++ b/WebDesignHomework/Assignment13/about.html
@@ -29,6 +29,13 @@
         <h1 style="text-align: center;">TRAVEL WITH ME!</h1> 
     </header>
 
+    <!-- Gallery Section -->
+<section class="gallery">
+    <img src="images/cave.jpeg" alt="Na Pali Coast Cave" style="width: 30%"> 
+    <img src="images/coast.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;"> 
+    <img src="images/beach2.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
+</section>
+
   <!-- Blog Post Section -->
   <section class="blog-post"> 
     <p style="text-align: left;">Welcome to my TRAVELOG – your gateway to the world! Here, we celebrate the thrill of discovery, the joy of new experiences, and the magic of connecting with people and cultures across the globe. Our mission is to inspire, educate, and entertain travelers of all kinds—whether you're an experienced globetrotter, a weekend adventurer, or someone planning your first big trip.
@@ -39,12 +46,6 @@
         
     Our love for travel goes beyond destinations. It’s about the connections we make, the lessons we learn, and the memories we create along the way. So, dive in, explore, and let us help you write your own incredible travel story. Adventure awaits!</p> 
 </section>
-
-<!-- Gallery Section -->
-<section class="gallery">
-    <img src="images/cave.jpeg" alt="Na Pali Coast Cave" style="width: 30%"> 
-    <img src="images/coast.jpeg" alt="Na Pali Coast" style="width: 30%" style="height: 30%;"> 
-    <img src="images/beach2.jpeg" alt="Kauai Beach" style="width: 30%" style="height: 30%;"> 
 
 <hr >
 
