--- a/WebDesignHomework/Assignment13/contact.html
+++ b/WebDesignHomework/Assignment13/contact.html
@@ -52,9 +52,7 @@
     <!-- Footer Section -->
     <footer class="footer">
      <p style="text-align: left;">
-         Check out our about and home pages for more! &#8593;
-         <a href="about.html">About</a> 
-         <a href="travel.html">Home</a>
+        Learn more at the top of the page! &#8593;
      </p>
      <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
     <p style="text-align: center;">&copy; 
