--- a/WebDesignHomework/Assignment13/gallery.html
+++ b/WebDesignHomework/Assignment13/gallery.html
@@ -56,9 +56,7 @@
    <!-- Footer Section -->
    <footer class="footer">
     <p style="text-align: left;">
-        Check out our about and home pages for more! &#8593;
-        <a href="about.html">About</a> 
-        <a href="travel.html">Home</a>
+        Learn more at the top of the page! &#8593;
     </p>
     <p style="text-align: center;">&copy; My Travel Blog</p>
 </footer>
