--- a/WebDesignHomework/Assignment13/travel.html
+++ b/WebDesignHomework/Assignment13/travel.html
@@ -62,9 +62,7 @@
    <!-- Footer Section -->
 <footer class="footer">
     <p style="text-align: left;">
-        Check out our gallery for more photos and find out more about me, the author! &#8593;
-        <a href="gallery.html">Gallery</a> 
-        <a href="about.html">About</a>
+        Learn more at the top of the page! &#8593;
     </p>
     <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
     <p style="text-align: center;">&copy; My Travel Blog</p>
