--- a/WebDesignHomework/Assignment13/about.html
+++ b/WebDesignHomework/Assignment13/about.html
@@ -51,7 +51,7 @@
 
      <!-- Footer Section -->
      <footer class="footer">
-        <p style="text-align: left;">
+        <p style="text-align: right;">
             Learn more at the top of the page! &#8593;
         </p>
         <img src="images/me.jpeg" alt="Get To Know Me" class="center" style="width: 1.1in; height: 1.4in;"> 
@@ -62,4 +62,3 @@
     </body> 
     </html> 
 
-    MORE TO COME SOON...
