--- a/WebDesignHomework/Assignment13/gallery.html
+++ b/WebDesignHomework/Assignment13/gallery.html
@@ -55,7 +55,7 @@
 
    <!-- Footer Section -->
    <footer class="footer">
-    <p style="text-align: left;">
+    <p style="text-align: right;">
         Learn more at the top of the page! &#8593;
     </p>
     <p style="text-align: center;">&copy; My Travel Blog</p>
