--- a/WebDesignHomework/Assignment13/travel.html
+++ b/WebDesignHomework/Assignment13/travel.html
@@ -51,7 +51,7 @@
 
     <!-- Quote Section -->
     <section class="quote">
-    <blockquote style="text-align: right;"> 
+    <blockquote style="text-align: left;"> 
         "The world is a book and those who do not travel read only one page." <br /> 
         — ST. AUGUSTINE 
     </blockquote>
